<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.edit.fragments.stellag.StellagFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_back_ok_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_backward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_backward"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/radio_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttons_back_ok_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/sklad_rg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/sklad_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sklad_tag"
                android:textSize="16sp"
                android:textStyle="bold" />
            <RadioButton
                android:id="@+id/sklad_niz_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:text="@string/r_btn_nizA"/>
            <RadioButton
                android:id="@+id/sklad_niz_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:text="@string/r_btn_nizB"/>
            <RadioButton
                android:id="@+id/sklad_niz_С"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:text="@string/r_btn_nizC"/>
            <RadioButton
                android:id="@+id/sklad_niz_D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:text="@string/r_btn_nizD"/>
            <RadioButton
                android:id="@+id/sklad_verh_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:text="@string/r_btn_verhA"/>

            <RadioButton
                android:id="@+id/sklad_verh_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:text="@string/r_btn_verhB"/>
            <RadioButton
                android:id="@+id/sklad_xim_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:text="@string/r_btn_ximA"/>
            <RadioButton
                android:id="@+id/sklad_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:text="@string/r_btn_none"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/stellag_rg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/stellag_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stellag_tag"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/vertical_rg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/vertical_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/vertical_tag"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/horizontal_rg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/horizontal_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/horizontal_tag"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>