<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.main.signscreen.SignInFragment">

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            android:layout_marginBottom="@dimen/sign_margin_bottom"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="50sp"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:autofillHints=""
            android:layout_marginBottom="@dimen/sign_margin_bottom"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:autofillHints=""
            android:layout_marginBottom="@dimen/sign_margin_bottom"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:inputType="textPassword" />

        <include
            android:id="@+id/login_button"
            layout="@layout/progress_bar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>